Fix T41573: Compositing reroute converts floats to red color

At compo level, only skip data type conversion if both ends of a link do not require it.

Thanks to Lukas for advices and review.